--- a/package.json
+++ b/package.json
@@ -17,8 +17,14 @@
   },
   "homepage": "https://github.com/juyeonkim97/node-calendar#readme",
   "dependencies": {
+    "@fullcalendar/core": "^5.8.0",
+    "@fullcalendar/daygrid": "^5.8.0",
+    "@fullcalendar/interaction": "^5.8.0",
+    "bootstrap": "^5.0.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "fullcalendar": "^5.8.0"
+    "fullcalendar": "^5.8.0",
+    "jquery": "^3.6.0",
+    "moment": "^2.29.1"
   }
 }
