--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "fullcalendar": "^5.8.0",
     "jquery": "^3.6.0",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "mysql": "^2.18.1"
   }
 }
