--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
   "homepage": "https://github.com/juyeonkim97/node-calendar#readme",
   "dependencies": {
     "bootstrap": "^5.0.2",
-    "bootstrap-timepicker": "^0.5.2",
+    "crypto-js": "^4.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "fullcalendar": "^5.8.0",
     "jquery": "^3.6.0",
-    "moment": "^2.29.1",
     "mysql": "^2.18.1"
   }
 }
