--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "bootstrap": "^5.0.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "fullcalendar": "^5.8.0",
     "jquery": "^3.6.0",
     "mysql": "^2.18.1",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
