--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
+    "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
